crates/aura-core/tests/snapshots/snapshots__web_counter_js.snap
---
source: crates/aura-core/tests/snapshots.rs
expression: output.js
---
// Aura App — Generated by Aura Compiler
'use strict';

let _actionRegistry = Object.create(null);
let _actionId = 0;
function _registerAction(fn) {
  const id = `action-${++_actionId}`;
  _actionRegistry[id] = fn;
  return id;
}

function _invokeAction(id) {
  const action = _actionRegistry[id];
  if (typeof action === 'function') {
    action();
  }
}

const _state = {
  count: 0,
};

const state = new Proxy(_state, {
  set(target, prop, value) {
    target[prop] = value;
    _scheduleRender();
    return true;
  }
});

let _renderPending = false;
function _scheduleRender() {
  if (!_renderPending) {
    _renderPending = true;
    requestAnimationFrame(() => { _renderPending = false; render(); });
  }
}

function increment() {
  state.count = (state.count + 1);
}

function decrement() {
  state.count = (state.count - 1);
}

function render() {
  const app = document.getElementById('app');
  if (!app) return;
  // Save focused element
  const focused = document.activeElement;
  const focusedBind = focused?.dataset?.bind;
  const focusedPos = focused?.selectionStart;
  app.innerHTML = renderView();
  _bindEvents();
  // Restore focus
  if (focusedBind) {
    const el = document.querySelector(`[data-bind="${focusedBind}"]`);
    if (el) { el.focus(); if (focusedPos != null) try { el.setSelectionRange(focusedPos, focusedPos); } catch(e) {} }
  }
}

function renderView() {
  return `
        <div class="aura-column text-center" style="gap: 16px; padding: 24px; text-align: center; align-items: center">
            <h1 class="aura-heading" style="font-size: 1.5rem">Counter</h1>
            <span class="aura-text text-bold" style="font-size: 3rem">${state.count}</span>
            <div class="aura-row" style="gap: 8px">
                <button class="aura-button color-danger" data-action-id="${_registerAction(() => { decrement() })}">-</button>
                <button class="aura-button color-accent" data-action-id="${_registerAction(() => { increment() })}">+</button>
            </div>
        </div>
`;
}

const _icons = {'arrow.up':'⬆️','arrow.up.circle.fill':'⬆️','trash':'🗑','trash.fill':'🗑','plus':'+','plus.circle':'+','minus':'−','star':'⭐','star.fill':'⭐','heart':'❤️','heart.fill':'❤️','checkmark':'✅','checkmark.circle':'✅','xmark':'❌','magnifyingglass':'🔍','gear':'⚙️','person':'👤','house':'🏠','bell':'🔔','camera':'📷','photo':'🖼️','sun.max':'☀️','cloud':'☁️','cloud.rain':'🌧️','cloud.snow':'🌨️','drop':'💧','wind':'💨','lock.circle':'🔒','lock':'🔒','phone':'📞','video':'📹','mic':'🎤','cart':'🛒','inbox':'📥','square.and.pencil':'✏️','bubble.left.and.bubble.right':'💬',};
function _icon(n) { return _icons[n] || n; }

function _bindEvents() {
  document.querySelectorAll('[data-action-id]').forEach(el => {
    const id = el.dataset.actionId;
    el.onclick = event => {
      event.preventDefault();
      _invokeAction(id);
    };
  });
  // Bind input elements to state
  document.querySelectorAll('[data-bind]').forEach(el => {
    const key = el.dataset.bind;
    if (el.type === 'checkbox') {
      el.checked = !!state[key];
      el.onchange = () => { state[key] = el.checked; };
    } else {
      el.value = state[key] || '';
      el.oninput = () => { state[key] = el.value; };
    }
  });
}

// Initialize on DOM ready
document.addEventListener('DOMContentLoaded', render);
