crates/aura-core/tests/snapshots/snapshots__web_model_js.snap
---
source: crates/aura-core/tests/snapshots.rs
expression: web.js
---
// Aura App — Generated by Aura Compiler
'use strict';

const _state = {
};

const state = new Proxy(_state, {
  set(target, prop, value) {
    target[prop] = value;
    _scheduleRender();
    return true;
  }
});

let _renderPending = false;
function _scheduleRender() {
  if (!_renderPending) {
    _renderPending = true;
    requestAnimationFrame(() => { _renderPending = false; render(); });
  }
}

function User(fields) {
  return { name: fields.name ?? null, email: fields.email ?? null, active: fields.active ?? true };
}

function render() {
  const app = document.getElementById('app');
  if (!app) return;
  app.innerHTML = renderView();
  _bindEvents();
}

function renderView() {
  return `
        <span class="aura-text">hi</span>
`;
}

const _icons = {'arrow.up':'⬆️','arrow.up.circle.fill':'⬆️','trash':'🗑','trash.fill':'🗑','plus':'+','plus.circle':'+','minus':'−','star':'⭐','star.fill':'⭐','heart':'❤️','heart.fill':'❤️','checkmark':'✅','checkmark.circle':'✅','xmark':'❌','magnifyingglass':'🔍','gear':'⚙️','person':'👤','house':'🏠','bell':'🔔','camera':'📷','photo':'🖼️','sun.max':'☀️','cloud':'☁️','cloud.rain':'🌧️','cloud.snow':'🌨️','drop':'💧','wind':'💨','lock.circle':'🔒','lock':'🔒','phone':'📞','video':'📹','mic':'🎤','cart':'🛒','inbox':'📥','square.and.pencil':'✏️','bubble.left.and.bubble.right':'💬',};
function _icon(n) { return _icons[n] || n; }

function _bindEvents() {
  // Bind input elements to state
  document.querySelectorAll('[data-bind]').forEach(el => {
    const key = el.dataset.bind;
    if (el.type === 'checkbox') {
      el.checked = !!state[key];
      el.onchange = () => { state[key] = el.checked; };
    } else {
      el.value = state[key] || '';
      el.oninput = () => { state[key] = el.value; };
    }
  });
}

// Initialize on DOM ready
document.addEventListener('DOMContentLoaded', render);
