crates/aura-core/tests/snapshots/snapshots__web_todo_js.snap
---
source: crates/aura-core/tests/snapshots.rs
expression: output.js
---
// Aura App — Generated by Aura Compiler
'use strict';

const _state = {
  tasks: [],
  input: "",
};

const state = new Proxy(_state, {
  set(target, prop, value) {
    target[prop] = value;
    _scheduleRender();
    return true;
  }
});

let _renderPending = false;
function _scheduleRender() {
  if (!_renderPending) {
    _renderPending = true;
    requestAnimationFrame(() => { _renderPending = false; render(); });
  }
}

function Task(fields) {
  return { title: fields.title ?? null, done: fields.done ?? false };
}

function addTask(title) {
  state.tasks = [...state.tasks, Task({ title: title })];
}

function render() {
  const app = document.getElementById('app');
  if (!app) return;
  app.innerHTML = renderView();
  _bindEvents();
}

function renderView() {
  return `
        <div class="aura-column" style="gap: 8px; padding: 16px">
            <h1 class="aura-heading">Tasks</h1>
            <div class="aura-row" style="gap: 4px">
                <input class="aura-input" type="text" placeholder="New task..." data-bind="input" value="${state.input || ''}"/>
                <button class="aura-button color-accent" onclick="addTask(state.input)">Add</button>
            </div>
${state.tasks.map((task, _idx) => `<div class="aura-row text-center" style="gap: 8px; text-align: center; align-items: center">
                    <input class="aura-checkbox" type="checkbox" data-bind="task.done" ${(task.done) ? 'checked' : ''}/>
                    <span class="aura-text">${task.title}</span>
                </div>`).join('')}        </div>
`;
}

const _icons = {'arrow.up':'⬆️','arrow.up.circle.fill':'⬆️','trash':'🗑','trash.fill':'🗑','plus':'+','plus.circle':'+','minus':'−','star':'⭐','star.fill':'⭐','heart':'❤️','heart.fill':'❤️','checkmark':'✅','checkmark.circle':'✅','xmark':'❌','magnifyingglass':'🔍','gear':'⚙️','person':'👤','house':'🏠','bell':'🔔','camera':'📷','photo':'🖼️','sun.max':'☀️','cloud':'☁️','cloud.rain':'🌧️','cloud.snow':'🌨️','drop':'💧','wind':'💨','lock.circle':'🔒','lock':'🔒','phone':'📞','video':'📹','mic':'🎤','cart':'🛒','inbox':'📥','square.and.pencil':'✏️','bubble.left.and.bubble.right':'💬',};
function _icon(n) { return _icons[n] || n; }

function _bindEvents() {
  // Bind input elements to state
  document.querySelectorAll('[data-bind]').forEach(el => {
    const key = el.dataset.bind;
    if (el.type === 'checkbox') {
      el.checked = !!state[key];
      el.onchange = () => { state[key] = el.checked; };
    } else {
      el.value = state[key] || '';
      el.oninput = () => { state[key] = el.value; };
    }
  });
}

// Initialize on DOM ready
document.addEventListener('DOMContentLoaded', render);
